syntax = "proto3";
package payload.manager.v1;

/*
  Canonical payload identifier.

  MUST contain exactly 16 bytes (binary RFC4122 UUID).
  The server rejects any other length.

  This is intentionally NOT a string to avoid formatting ambiguity.
*/
message PayloadID {
  bytes value = 1;
}
